--- a/apps/topgg-tracker/package.json
+++ b/apps/topgg-tracker/package.json
@@ -1,21 +1,21 @@
 {
   "name": "topgg-tracker",
   "scripts": {
-		"start": "dotenv -e .env -- node dist/index.js",
-		"build": "tsc",
-		"dev": "dotenv -e .env -- node dist/index.js",
-		"lint": "eslint src/",
-		"lint:fix": "eslint --fix src/"
+    "start": "dotenv -e .env -- node dist/index.js",
+    "build": "tsc",
+    "dev": "dotenv -e .env -- node dist/index.js",
+    "lint": "eslint src/",
+    "lint:fix": "eslint --fix src/"
   },
   "dependencies": {
-    "@hono/node-server": "^1.4.1",
-    "@types/node": "^20.11.5",
-    "seyfert": "github:potoland/potocuit#master",
-    "dotenv": "^16.3.1",
-    "hono": "^3.12.5",
-    "mongoose": "^8.1.0",
-    "zod": "^3.22.4",
+    "@hono/node-server": "^1.11.1",
     "@repo/database": "workspace:*",
-    "dotenv-cli": "^7.3.0"
+    "@types/node": "^20.12.7",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
+    "hono": "^3.12.12",
+    "mongoose": "^8.3.2",
+    "seyfert": "github:potoland/potocuit#master",
+    "zod": "^3.23.4"
   }
 }
