--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,8 @@
 		"rules": {
 			"all": true,
 			"suspicious": {
-				"noConsoleLog": "off"
+				"noConsoleLog": "off",
+				"noEmptyBlockStatements": "off"
 			},
 			"style": {
 				"noNonNullAssertion": "off",
