--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,10 +13,11 @@
   "main": "src/index.ts",
   "dependencies": {
     "@repo/logger": "workspace:*",
-    "@types/node": "^20.12.11",
+    "@types/node": "^20.16.5",
     "dotenv-cli": "^7.4.2",
     "inversify": "^6.0.2",
-    "mongoose": "^8.3.4",
+    "mongodb": "^6.8.0",
+    "papr": "^15.2.2",
     "reflect-metadata": "^0.2.2"
   }
 }
