--- a/apps/topgg-tracker/package.json
+++ b/apps/topgg-tracker/package.json
@@ -15,6 +15,7 @@
     "dotenv-cli": "^7.4.2",
     "hono": "^3.12.12",
     "mongoose": "^8.6.1",
+    "reflect-metadata": "^0.2.2",
     "seyfert": "github:potoland/potocuit#master",
     "zod": "^3.23.8"
   }
